Finished Javascript for now and did a lot of styling. ToDos: Animate tds transition for revealing question/answers; Handle reseting vs start; Fix sizing issues on mobile.

--- a/section-1/jeopardy/jeopardy.css
+++ b/section-1/jeopardy/jeopardy.css
@@ -5,3 +5,105 @@
   #8d2ab5
   #74119c
 */
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  background-color: #060ce9;
+}
+
+header h1 {
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 5rem;
+  color: white;
+
+  margin-bottom: 0px;
+}
+
+#start {
+  display: block;
+  margin: 0 auto;
+  height: 4rem;
+  width: 8rem;
+  margin-top: 20px;
+
+  background-color: goldenrod;
+
+  border-radius: 8px;
+  border-color: white;
+
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2em;
+}
+
+#spin-container {
+  height: 70%;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#spin-container i {
+  color: white;
+}
+
+#jeopardy {
+  width: 95%;
+  height: 60%;
+
+  margin: 0 auto;
+  margin-top: 2rem;
+  border: 10px solid black;
+  border-radius: 5px;
+}
+
+thead {
+  width: 100%;
+  height: 16%;
+}
+
+thead tr{
+  width: 100%;
+}
+
+thead tr td {
+  width: 16%;
+  text-align: center;
+  color: white;
+
+  font-size: 2rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-shadow: 5px 1px black;
+}
+
+tbody tr {
+  height: 20%;
+}
+
+tbody tr td {
+  text-align: center;
+  color: #b08f26;
+  font-size: 5rem;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+  font-weight: bolder;
+  text-shadow: 5px 2px black;
+}
+
+
+td {
+  overflow-wrap: break-word;
+  background-color: #115ff4;
+  border: 5px solid black;
+}
+
+td[showing="question"], td[showing="answer"] {
+  color: white;
+  font-size: 1rem;
+  text-shadow: none;
+}
+
